[gd_scene load_steps=6 format=3 uid="uid://c253aqrs8nxjw"]

[ext_resource type="Script" path="res://area2d/area2d_basic.gd" id="1_tdv2t"]
[ext_resource type="Texture2D" uid="uid://dxvweghqhlqmv" path="res://resources/sprite/actor001/actor001_win_01.png" id="2_14pa1"]
[ext_resource type="Texture2D" uid="uid://br7733mi0v430" path="res://resources/sprite/actor001/actor001_win_02.png" id="3_s28b8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07eur"]
size = Vector2(134, 216)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc8r6"]
size = Vector2(134, 216)

[node name="area2d_basic" type="Node2D"]
script = ExtResource("1_tdv2t")

[node name="Area2D_Player" type="Area2D" parent="."]
position = Vector2(405, 339)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Player"]
shape = SubResource("RectangleShape2D_07eur")

[node name="Sprite2D" type="Sprite2D" parent="Area2D_Player"]
texture_filter = 1
scale = Vector2(5.61539, 5.61539)
texture = ExtResource("2_14pa1")

[node name="Label" type="Label" parent="Area2D_Player"]
offset_left = -24.0
offset_top = -132.0
offset_right = 25.0
offset_bottom = -109.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Player"

[node name="Area2D_Area" type="Area2D" parent="."]
position = Vector2(615, 320)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Area"]
shape = SubResource("RectangleShape2D_sc8r6")

[node name="Sprite2D" type="Sprite2D" parent="Area2D_Area"]
texture_filter = 1
scale = Vector2(5.61539, 5.61539)
texture = ExtResource("3_s28b8")

[node name="Label" type="Label" parent="Area2D_Area"]
offset_left = -24.0
offset_top = -132.0
offset_right = 25.0
offset_bottom = -109.0
theme_override_colors/font_color = Color(0.412152, 0.412152, 0.412152, 1)
text = "Sensor
"

[node name="Label" type="Label" parent="."]
offset_left = 605.0
offset_top = 576.0
offset_right = 645.0
offset_bottom = 599.0
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "X"

[connection signal="area_entered" from="Area2D_Player" to="." method="_on_area_2d_player_area_entered"]
[connection signal="area_exited" from="Area2D_Player" to="." method="_on_area_2d_player_area_exited"]
